--- a/sysboard.css
+++ b/sysboard.css
@@ -1,79 +1,182 @@
+@import url("https://fonts.googleapis.com/css?family=Lato");
+
 *, *::before, *::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   background-color: rgb(240, 242, 245);
-  color: black;
-  font-family: sans-serif;
+  color: rgb();
+  font-family: "Lato", sans-serif;
   font-size: 16px;
   font-weight: normal;
+  line-height: 1.3;  
 }
 
-main {
+input, select, option, button {
+  background-color: rgb(240, 242, 245);
+  border: 0;
+  border-radius: 05px;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  outline: none;
+  padding: 12px;
+}
+
+input, select, option {
+  width: 100%;
+}
+
+button {
+  cursor: pointer;
+}
+
+table {
+  border: 01px solid rgb(240, 242, 245);
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table thead {
+  background-color: rgb(240, 242, 245);
+}
+
+tr {
+  border-bottom: 01px solid rgb(240, 242, 245);
+}
+
+tr:last-child {
+  border-bottom: 0;
+}
+
+td {
+  padding: 10px;
+}
+
+body > main {
   margin: 0 auto;
   width: 50%;
 }
 
-main > header {
+body > main > header {
   padding: 35px 0;
-}
-
-main > header > p {
-  margin-bottom: 20px;
-}
-
-header > p {
-  color: rgb(50%, 50%, 50%);
 }
 
 main section {
   background-color: white;
-  border-radius: 03px;
-  box-shadow: 01px 01px 03px rgb(230, 230, 230);
-  margin-bottom: 20px;
+  border: 0;
+  border-radius: 05px;
+  box-shadow: 01px 01px 02px rgb(222, 224, 228);
   padding: 20px;
-}
-
-main section:last-child {
-  margin-bottom: 0;
+  margin-bottom: 15px;
 }
 
 main section > header {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
-input, select, option {
-  background-color: rgb(230, 230, 230);
-  color: inherit;
-  border: 0;
-  border-radius: 03px;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  outline: 0;
-  padding: 15px;
+main section > header > p {
+  color: rgb(40%, 40%, 40%);
 }
 
-input:focus, input:hover,
-select:focus, option:hover {
-  background-color: rgb(220, 220, 220);
+/** Buttons */
+.btn-alert, .notify-error {
+  background-color: #AC0000;
+  color: white;
 }
 
-table {
-  width: 100%;
+.btn-warning, .notify-info {
+  background-color: rgba(219, 83, 20, 0.76);
+  color: white;
 }
 
-thead {
-  background-color: rgb(240, 242, 245);
+.btn-success, .notify-success {
+  background-color: rgb(15, 92, 192);
+  color: white;
 }
 
-tr, td {
+/** Loader **/
+.loader {
+  animation: spinner 1s linear infinite;
+  border-radius: 100%;
+  border: 5px solid transparent;
+}
+
+.loader-small {
+  height: 25px;
+  width: 25px;
+}
+
+.loader-medium {
+  height: 50px;
+  width: 50px;
+}
+
+.loader-large {
+  height: 100px;
+  width: 100px;
+  border-width: 25px;
+}
+
+.spinner-default {
+  border-color: red;
+  border-left-color: white;
+}
+
+@keyframes spinner {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+/** Groups */
+.group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.group-div {
+  flex: 1;
+}
+
+.group-space .group-div {
   padding: 05px;
 }
 
-table, tr, td {
-  border-collapse: collapse;
+.group-space-input p {
+  margin-bottom: 05px;
+}
+
+.group-space, .group-div,
+.group-space-input .group-div {
+  margin: 05px;
+}
+
+/** Notify */
+#notifications {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#notifications .notify {
+  width: 50%;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 05px;
+  margin-bottom: 10px;
 }
